--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,30 @@ h2 {
     background-position: center;
 } 
 
+#orange-dummy-crystal {
+    background-image: url(img/crystal_orange.png);
+    background-size: 150px;
+    background-position: center;
+}
+
+#green-dummy-crystal {
+    background-image: url(img/crystal_green.png);
+    background-size: 150px;
+    background-position: center;
+}
+
+#red-dummy-crystal {
+    background-image: url(img/crystal_red.png);
+    background-size: 150px;
+    background-position: center;
+}
+
+#blue-dummy-crystal {
+    background-image: url(img/crystal_blue.png);
+    background-size: 150px;
+    background-position: center;
+}
+
 #winnerSign h2, #loserSign h2 {
     color: rgb(104, 83, 114);
     font-size: 200%;
@@ -158,7 +182,6 @@ h2 {
     font-family: 'Playfair Display', serif;
     font-style: italic;
 }
-
 
 #winnerSign img, #loserSign img {
     display: inline;
@@ -175,7 +198,7 @@ h2 {
     margin-left: -250px;
     text-align: center;
     padding: 20px;
-    box-shadow: .5px .5px 10px #000;
+    box-shadow: 1px 1px 6px rgba(77, 77, 77, 0.5);
     background-color: rgba(255, 255, 255, 0.65);
     display: none;
 }
