--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
     background-attachment: fixed;
     font-family: 'Josefin Sans', sans-serif; /* 100, 300 */
     color: #fff !important;
+    font-size: 8px;
 }
 
 * {
@@ -21,24 +22,34 @@ a:hover {
     text-decoration: none !important;
 }
 
-h3, h4 {
-    color: #b7b7b7 !important;
+h3 {
+    color: #747474 !important;
     font-family: 'Josefin Sans', sans-serif !important; /*300, 500*/
-    font-size: 50px;
-    font-weight: 300;
+    font-size: 150% !important;
+    text-transform: uppercase;
+    font-weight: 100;
+}
+
+h4 {
+    color: #747474 !important;
+    font-family: 'Josefin Sans', sans-serif !important; /*300, 500*/
+    font-size: 120% !important;
     font-style: italic;
     text-transform: uppercase;
 }
 
 p {
     font-family: 'Playfair Display', serif;
-    color: #b7b7b7;
-    font-size: 200%;
+    color: #747474;
+    font-size: 150%;
+    font-style: italic;
+    margin-top: -20px !important;
 }
 
 .jumbotron {
     background-color: rgba(255, 255, 255, 0) !important;
     text-align: center;
+    margin-bottom: -30px !important;
     
 }
 
@@ -47,7 +58,7 @@ h1 {
     font-weight: 300;
     letter-spacing: 5px;
     text-transform: uppercase;
-    font-size: 400% !important;
+    font-size: 300% !important;
     color: #747474 !important;
 }
 
@@ -56,12 +67,15 @@ h2 {
     font-weight: 100;
     letter-spacing: 5px;
     text-transform: uppercase;
+    font-size: 200% !important;
     color: #747474 !important;
 }
 
 .jumbotron p {
     font-family: 'Playfair Display', serif;
-    color: #b4b4b4;
+    color: ##acacac;
+    font-size: 130% !important;
+    font-weight: 400;
 }
 
 .star {
@@ -87,10 +101,6 @@ h2 {
     background-color: rgba(255, 255, 255, 0.52);
 }
 
-.game-stage h1 {
-    font-size: 80px;   
-}
-
 .col-md-6 {
     text-align: center;
 }
@@ -98,21 +108,21 @@ h2 {
 #goalValue, #playerValue {
     font-family: 'Playfair Display', serif !important;
     font-weight: 400;
-    color: #747474;
-    font-size: 900%;
+    color: #acacac;
+    font-size: 600%;
     text-align: center;
-    line-height: 120px;
+    line-height: 90px;
 }
 
 .col-md-3 {
     background-repeat: no-repeat;
     background-position: center;
-    height: 270px;
+    height: 200px;
 }
 
 .real-crystal {
     display: block;
-    background-size: 150px;
+    background-size: 110px;
     background-position: center;
 }
 
@@ -124,7 +134,7 @@ h2 {
 } 
 .green-crystal-box {
     background-image: url(img/crystal_green.png);
-    background-size: 150px;
+    background-size: 110px;
     background-position: center;
 }
 .green-crystal-box:hover {
@@ -145,7 +155,7 @@ h2 {
 } 
 
 .dummy-crystal {
-    background-size: 150px;
+    background-size: 110px;
     background-position: center;
     display: none;
 }
@@ -164,6 +174,13 @@ h2 {
 
 .blue-bg {
     background-image: url(img/crystal_blue.png);
+}
+
+#winCount, #lossCount {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    font-size: 150%;
+    color: #acacac
 }
 
 #winnerSign h2, #loserSign h2 {
