--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,18 +189,9 @@ h2 {
     display: inline;
 }
 
-#winnerSign p, #loserSign p {
-    color: #939393;
-    margin-top: 20px;
-    font-size: 150%;
-    font-family: 'Playfair Display', serif;
-    font-style: italic;
-}
-
 .sans-serif {
     font-family: 'Josefin Sans', sans-serif !important; /*300, 500*/
     color: #747474;
-    font-size: 90%;
     font-weight: 300;
 }
 
@@ -212,15 +203,15 @@ h2 {
     position: fixed;
     z-index: 1;
     width: 500px;
-    height: auto;
+    height: 300px;
     top: 50%;
     left: 50%;
     margin-top: -100px;
     margin-left: -250px;
     text-align: center;
     padding: 20px;
-    box-shadow: 1px 1px 6px rgba(77, 77, 77, 0.5);
-    background-color: rgba(255, 255, 255, 0.65);
+    box-shadow: 1px 1px 6px rgba(77, 77, 77, 0.8);
+    background-color: rgba(255, 255, 255, 0.92);
     display: none;
 }
 
