--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ html, body{
 
 /* Links */
 a {
-    color: #56c0cc;
+    color: #b8f0f7;
 }
 a:hover {
     color: #1ca5b8;
@@ -94,9 +94,6 @@ table {
     margin: 0 auto !important;
 }
 tr {
-    text-transform: capitalize;
-}
-span {
     text-transform: capitalize;
 }
 th {
@@ -143,6 +140,11 @@ th, td {
 }
 .top-artists {
     float: right;
+}
+
+#current-top-artist {
+    text-transform: capitalize !important;
+    display: inline;
 }
 
 
@@ -266,9 +268,14 @@ th, td {
     background-color: #fcfcfc;
 }
 
-additionalContent {
-    padding-bottom: 200px;
+#additionalContent {
+    margin-bottom: 100px !important;
+    border-top: 6px solid #012d41;
+    border-bottom: 6px solid #012d41;
+    width: 100%;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.26);
 }
+
 
 /*//////////////////////////////// PAGE BORDERS-Please don't touch. /////////////////////////////////*/
 
